# accelerate-lapacke

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  README.md
cmake/: HandlePolicies.cmake  ParseTBDMacros.cmake
src/: CMakeLists.txt  lapack64_version.c  lapack_version.c
